--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <div id="row_1">
   <h1 id="header">Make a Selection: </h1>
+  <button id = "reset">Reset Records</button>
 </div>
 <div id="row_2">
   <div id="user_record">
@@ -54,7 +55,7 @@
     <div><h5 id="user_choice_image"></h5></div>
   </div>
 
-  <div><h1 id="result">result</h1></div>
+  <div><h1 id="result"></h1></div>
 
 
   <div id="opponent_choice">
